# serializer version: 1
# name: TestJobApplicationNotifications.test_refuse[False-False][job_seeker_email]
  '''
  Votre candidature chez Acme inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse[False-True][job_seeker_email]
  '''
  Votre candidature chez Acme inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse[False-True][prescriber_email]
  '''
  La candidature de Jane DOE envoyée par Pierre DUPONT chez Acme inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus non transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  *Message privé de l'entreprise (non transmis au candidat)* :
  
  Le candidat n'est pas venu.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse[True-False][job_seeker_email]
  '''
  Votre candidature chez Acme inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Motif de refus* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse[True-True][job_seeker_email]
  '''
  Votre candidature chez Acme inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Motif de refus* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse[True-True][prescriber_email]
  '''
  La candidature de Jane DOE envoyée par Pierre DUPONT chez Acme inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  *Message privé de l'entreprise (non transmis au candidat)* :
  
  Le candidat n'est pas venu.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
